; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/dmusic/extr_dmobject.c_stream_skip_chunk.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/dmusic/extr_dmobject.c_stream_skip_chunk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chunk_entry = type { i32, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_5__ = type { i32 }

@CHUNK_HDR_SIZE = common dso_local global i32 0, align 4
@STREAM_SEEK_SET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @stream_skip_chunk(i32* %0, %struct.chunk_entry* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.chunk_entry*, align 8
  %5 = alloca %struct.TYPE_5__, align 4
  store i32* %0, i32** %3, align 8
  store %struct.chunk_entry* %1, %struct.chunk_entry** %4, align 8
  %6 = load %struct.chunk_entry*, %struct.chunk_entry** %4, align 8
  %7 = getelementptr inbounds %struct.chunk_entry, %struct.chunk_entry* %6, i32 0, i32 1
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @CHUNK_HDR_SIZE, align 4
  %11 = add nsw i32 %9, %10
  %12 = load %struct.chunk_entry*, %struct.chunk_entry** %4, align 8
  %13 = getelementptr inbounds %struct.chunk_entry, %struct.chunk_entry* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = add nsw i32 %11, %14
  %16 = add nsw i32 %15, 1
  %17 = and i32 %16, -2
  %18 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  store i32 %17, i32* %18, align 4
  %19 = load i32*, i32** %3, align 8
  %20 = load i32, i32* @STREAM_SEEK_SET, align 4
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @IStream_Seek(i32* %19, i32 %22, i32 %20, i32* null)
  ret i32 %23
}

declare dso_local i32 @IStream_Seek(i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
